--- a/test_environment.ipynb
+++ b/test_environment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -15,8 +15,8 @@
       "\u001b[42m[ OK ]\u001b[0m matplotlib version 3.5.1 is installed.\n",
       "\u001b[42m[ OK ]\u001b[0m sklearn version 1.0.2 is installed.\n",
       "\u001b[42m[ OK ]\u001b[0m pandas version 1.4.2 is installed.\n",
-      "\u001b[42m[ OK ]\u001b[0m xgboost version 1.5.1 is installed.\n",
-      "\u001b[42m[ OK ]\u001b[0m shap version 0.40.0 is installed.\n"
+      "\u001b[41m[FAIL]\u001b[0m xgboost not installed. \n",
+      "\u001b[41m[FAIL]\u001b[0m shap not installed. \n"
      ]
     }
    ],
